# pet-pal

./: .pre-commit-config.yaml  Cargo.toml  deny.toml  readme.md
.github/workflows/: work.yaml
examples/: frame_flash.rs  frame_stocking.rs  load_images.rs  my_egui.rs
src/: animation_system.rs  lib.rs  main.rs
